--- a/apps/app1/package.json
+++ b/apps/app1/package.json
@@ -1,7 +1,7 @@
 {
   "name": "testApp1",
   "version": "1.0.0",
-  "description": "Sme test app using testModule",
+  "description": "Some test app using testModule",
   "main": "index.js",
   "scripts": {
     "test": "mocha --opts ./mocha.opts",
