chore(push): Fix: lerna-semantic-release tags were not pushed during regular push
Now it is guaranteed that release tags are pushed. Furthermore it is not necessary to change git

config file to do so.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "security": "nsp check",
     "test": "./node_modules/.bin/lerna run test -- --silent",
     "semantic-release": "./node_modules/.bin/lerna-semantic-release pre",
-    "prepush": "npm run test --silent && npm run semantic-release"
+    "prepush": "npm run test --silent && ./scripts/pre-push.sh"
   },
   "author": "",
   "license": "ISC",
