--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "./node_modules/.bin/lerna run test -- --silent",
     "semantic-release": "./node_modules/.bin/lerna-semantic-release pre",
     "changelog": "./node_modules/.bin/lerna-semantic-release post",
-    "prepush": "npm run test --silent && ./scripts/pre-push.sh"
+    "prepush": "npm run test --silent",
+    "postmerge": "./scripts/post-merge.sh"
   },
   "author": "",
   "license": "ISC",
