--- a/apps/app1/package.json
+++ b/apps/app1/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "serverModule": "1.0.0",
     "testModule1": "2.0.0"
   },
   "devDependencies": {
